--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,12 +1,28 @@
 {
 	"grids count": "Grids count",
-    "sold": "Sold",
-    "fee": "Fee",
-    "min price": "Minimal price",
-    "reveal grids": "Reveal Grids",
-    "reveal mark": "Reveal Mark",
-    "longitude": "Longitude",
-    "Latitude": "Latitude",
-    "grid": "Grid",
-    "address": "address"
+	"sold": "Sold",
+	"fee": "Fee",
+	"min price": "Minimal price",
+	"reveal grids": "Reveal Grids",
+	"reveal mark": "Reveal Mark",
+	"longitude": "Longitude",
+	"Latitude": "Latitude",
+	"grid": "Grid",
+	"address": "address",
+	"contract": "contract",
+	"language": "language",
+	"status": "status",
+	"player board": "player board",
+	"earns": "earns",
+	"claim": "claim",
+	"owned grids": "owned grids",
+	"grid status": "grid status",
+	"latitude": "latitude",
+	"operation board": "operation board",
+	"current owner": "current owner",
+	"current state": "current state",
+	"current price": "current price",
+	"set grid label": "set grid label",
+	"SET": "SET",
+	"set grid picture": "set grid picture"
 }
