--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -31,5 +31,6 @@
 	"sell grid": "sell grid",
 	"enter sell price": "enter sell price",
 	"unknown network": "unknown or unsupported network",
-	"not connected to ETH": "not connected to ethereum, please check metamask"
+	"not connected to ETH": "not connected to ethereum, please check metamask",
+	"finding...": "finding..."
 }
