init user starship
Change-Id: Iadd8d6d46a2aaf637f636938011deac9fc7dd2bb

--- a/public/locales/ch.json
+++ b/public/locales/ch.json
@@ -39,5 +39,9 @@
 	"finding...": "检测中...",
 	"On Sell": "出售中",
 	"Owned": "私人领地",
-	"Forbidden":"禁区"
+	"Forbidden": "禁区",
+	"buy grid": "buy grid",
+	"buy": "buy",
+	"BUY": "BUY",
+	"BUYXS": "BUYXS"
 }
