--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -36,5 +36,8 @@
 	"BUY": "BUY",
 	"SELL": "SELL",
 	"NEW PIC": "NEW PIC",
-	"starship": "starship"
+	"starship": "starship",
+	"howtoplay": "howtoen.html",
+	"tutorial": "tutorial",
+	"How to play": "How to play"
 }
