Add remove image function

--- a/public/locales/ch.json
+++ b/public/locales/ch.json
@@ -46,5 +46,6 @@
 	"howtoplay": "howtoch.html",
 	"How to play": "游戏说明",
 	"SELL": "出售",
-	"starship": "星舰"
+	"starship": "星舰",
+        "DEL LOGO": "移除领地旗帜"
 }
