--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -39,5 +39,6 @@
 	"starship": "starship",
 	"howtoplay": "howtoen.html",
 	"tutorial": "tutorial",
-	"How to play": "How to play"
+	"How to play": "How to play",
+        "DEL LOGO": "DEL LOGO"
 }
