--- a/public/locales/ch.json
+++ b/public/locales/ch.json
@@ -47,5 +47,6 @@
 	"How to play": "游戏说明",
 	"SELL": "出售",
 	"starship": "星舰",
-        "DEL LOGO": "移除领地旗帜"
+	"DEL LOGO": "移除领地旗帜",
+	"DELETE": "删除"
 }
