--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -40,5 +40,6 @@
 	"howtoplay": "howtoen.html",
 	"tutorial": "tutorial",
 	"How to play": "How to play",
-        "DEL LOGO": "DEL LOGO"
+	"DEL LOGO": "DEL LOGO",
+	"DELETE": "DELETE"
 }
