--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -25,7 +25,7 @@
 	"set grid label": "set grid label",
 	"SET": "SET",
 	"set grid picture": "set grid picture",
-	"grid panel": "grid panel",
+	"grid panel": "grid",
 	"grid owner": "grid owner",
 	"enter grid index": "enter grid index",
 	"sell grid": "sell grid",
