--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -44,5 +44,6 @@
 	"DELETE": "DELETE",
 	"you may provide a link here": "you may provide a click link here",
 	"grid link": "grid link",
-	"no ether account connected": "ether account not connected, please check your metamask or mist configuration"
+	"no ether account connected": "ether account not connected, please check your metamask or mist configuration",
+	"upload_image": "/images/upload-en.jpeg"
 }
