--- a/public/locales/ch.json
+++ b/public/locales/ch.json
@@ -51,5 +51,13 @@
 	"DELETE": "删除",
 	"no ether account connected": "没有连接到以太账户，请检查metamask或者mist设置",
 	"you may provide a link here": "设置一个点击链接",
-	"upload_image": "/images/upload-ch.jpeg"
+	"upload_image": "/images/upload-ch.jpeg",
+	"contract call error": "合约调用失败",
+	"you are not the owner of the grid": "您不是领地的主人",
+	"you are already the owner of the grid": "您已经是领地主人了",
+	"grid is not on sell": "领地暂不出售",
+	"fail to init grid service": "领地服务启动失败",
+	"ethereum network not connected":"没有有连接到以太坊网络",
+	"fail to save configuration": "保存设置失败",
+	"fail to load configuration": "加载设置失败"
 }
