--- a/public/locales/ch.json
+++ b/public/locales/ch.json
@@ -59,5 +59,6 @@
 	"fail to init grid service": "领地服务启动失败",
 	"ethereum network not connected":"没有有连接到以太坊网络",
 	"fail to save configuration": "保存设置失败",
-	"fail to load configuration": "加载设置失败"
+	"fail to load configuration": "加载设置失败",
+	"searching...": "查找中..."
 }
