--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -45,5 +45,6 @@
 	"you may provide a link here": "you may provide a click link here",
 	"grid link": "grid link",
 	"no ether account connected": "ether account not connected, please check your metamask or mist configuration",
-	"upload_image": "/images/upload-en.jpeg"
+	"upload_image": "/images/upload-en.jpeg",
+	"searching...": "searching..."
 }
