--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -47,5 +47,6 @@
 	"no ether account connected": "ether account not connected, please check your metamask or mist configuration",
 	"upload_image": "/images/upload-en.jpeg",
 	"searching...": "searching...",
-	"want ETH in testnet?": "want ETH in testnet?"
+	"want ETH in testnet?": "want ETH in testnet?",
+	"fail upload image": "upload fail, image size should < 2M"
 }
